openpgp-ca/add-domain-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openpgp-ca
spec:
  template:
    spec:
